--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -2,3 +2,4 @@ imports:
   - { resource: Backend/Widgets/ListOfMembersWidget.yaml }
   - { resource: Backend/Widgets/ListOfLastModifiedPagesWidget.yaml }
   - { resource: Backend/Widgets/ListOfLastCreatedPagesWidget.yaml }
+  - { resource: Backend/Widgets/ListOfWorkspacePreviewLinksWidget.yaml }
