code refactoring, add tsconfig option

--- a/Configuration/Backend/Widgets/ListOfLastCreatedPagesWidget.yaml
+++ b/Configuration/Backend/Widgets/ListOfLastCreatedPagesWidget.yaml
@@ -9,10 +9,11 @@ services:
     resource: '../Classes/*'
 
   dashboard.provider.listOfLastCreatedPages:
-    class: 'Qc\QcWidgets\Widgets\ListOfLastCreatedPages\Provider\Imp\ListOfLastCreatedPagesProviderImp'
+    class: 'Qc\QcWidgets\Widgets\ListOfLastCreatedPages\Provider\ListOfLastCreatedPagesProviderImp'
     arguments:
       $table: 'pages'
       $orderField: 'crdate'
+      $orderType: 'DESC'
       $limit: 25
 
   dashboard.widget.listOfLastCreatedPages:
