--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "quebecca/qc-widgets",
+    "name": "qc/qc-widgets",
     "type": "typo3-cms-extension",
     "license": ["GPL-2.0-or-later"],
     "keywords": ["TYPO3 CMS"],
     "require": {
-        "typo3/cms-core": "^10.4",
-        "typo3/cms-rte-ckeditor": "^10.4",
-        "typo3/cms-fluid-styled-content": "^10.4"
+        "typo3/cms-core": "^10.4 || ^11.5.0",
+        "typo3/cms-rte-ckeditor": "^10.4 || ^11.5.0",
+        "typo3/cms-fluid-styled-content": "^10.4 || ^11.5.0"
     },
     "autoload": {
         "psr-4": {
