--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "typo3/cms-core": "^10.4 || ^11.5.0",
         "typo3/cms-rte-ckeditor": "^10.4 || ^11.5.0",
-        "typo3/cms-fluid-styled-content": "^10.4 || ^11.5.0"
+        "typo3/cms-fluid-styled-content": "^10.4 || ^11.5.0",
+        "workspaces" : "^11.5.99"
     },
     "autoload": {
         "psr-4": {
