--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "license": ["GPL-2.0-or-later"],
     "keywords": ["TYPO3 CMS"],
     "require": {
+        "php": "^8.2",
         "typo3/cms-core": "^10.4 || ^11.5.0",
         "typo3/cms-rte-ckeditor": "^10.4 || ^11.5.0",
         "typo3/cms-fluid-styled-content": "^10.4 || ^11.5.0",
